# macos-trackpad-companion

./: Cargo.toml  README.md
docs/: gesture-tuning-ideas.md
src/: app_context.rs  config.rs  descriptor.rs  gesture.rs  hid.rs  instance_lock.rs  lib.rs  main.rs  output.rs  overlay.rs  report.rs  scan_clock.rs  time.rs
